--- a/src/styles.css
+++ b/src/styles.css
@@ -36,12 +36,12 @@ body
 
 form {
   width: 30rem;
-  height: 32rem;
+  height: 35rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2rem;
   background-color: grey;
+  gap: 2.5rem;
   padding: 2rem;
   border: 0.5rem solid black;
   border-radius: 1rem;
@@ -50,8 +50,13 @@ form {
 form > p {
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  gap: 0.3rem;
 }
+
+/* form > p:nth-child(n+2):nth-child(-n+5) {
+  border-top: 0.2rem solid black;
+  padding-top: 0.5rem;
+} */
 
 form input, form select {
   width: 20rem;
@@ -63,4 +68,18 @@ form button {
   background-color: yellow;
   outline: none;
   border: 0.2rem solid black;
+}
+
+.input_error {
+  border: 0.2rem solid red;
+  background-color: red;
+  font-size: 80%;
+}
+
+.input_error_hidden {
+  display: none;
+}
+
+.input_error_active {
+  display: block;
 }
